fixing the about section

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
             <div>
               <h3 id="name">Eleftheria Batsou</h3>
               <p id="bio">Loading bio...</p>
-              <ul class="stats">
-                <li><strong>Followers:</strong> <span id="followers">—</span></li>
-                <li><strong>Following:</strong> <span id="following">—</span></li>
-                <li><strong>Public repos:</strong> <span id="repos">—</span></li>
-              </ul>
             </div>
           </div>
-          <p class="about-text">
-            Developer Advocate, keen on UX research and public speaking. This playful portfolio pulls in live data from GitHub, YouTube and Dev.to/Hashnode.
-            Click the blocks above to explore videos, articles, speaking engagements, and links.
-          </p>
+
+          <div id="about-intro" class="about-text">
+            Loading details from GitHub README...
+          </div>
+
+          <h3 class="subheading">Highlights</h3>
+          <ul id="about-highlights" class="highlights-list">
+            <!-- populated from README ('🌱 That's me') -->
+          </ul>
         </div>
       </section>
 
