working on the about me section

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       <section class="panel" id="panel-speaking">
         <h2>Speaking</h2>
         <p>Some recent conferences and meetups where I've spoken:</p>
-        <ul class="speaking-list" id="speaking-list">
+        <div id="speaking-timeline" class="timeline">
           <!-- populated from README highlights -->
-        </ul>
+        </div>
         <p class="note">
-          For a full list, check my GitHub profile README or reach out.
+          For a full list, check my <a href="https://github.com/EleftheriaBatsou/EleftheriaBatsou#-sometimes-i-speak-at-conferences" target="_blank" rel="noopener">GitHub profile README</a> or <a href="https://twitter.com/BatsouElef" target="_blank" rel="noopener">reach out on X/Twitter</a>.
         </p>
       </section>
 
@@ -156,7 +156,7 @@
 
     <footer class="footer">
       <div class="credits">
-        © <span id="year"></span> Eleftheria Batsou • Built with HTML/CSS/JS • Game aesthetics inspired by classic platformers.
+        © <span id="year"></span> Eleftheria Batsou • Built with HTML/CSS/JS
       </div>
     </footer>
   </div>
