let's fix a bit more the layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <div class="parallax">
       <div class="layer sky"></div>
       <div class="layer clouds"></div>
-      <div class="layer mountains"></div>
-      <div class="layer hills"></div>
     </div>
 
     <header class="hud">
@@ -32,35 +30,27 @@
 
     <main>
       <section class="stage">
-        <div class="ground"></div>
-
         <!-- Interactive blocks row -->
         <div class="blocks-row">
-          <button class="block question" data-panel="about" aria-label="Open About panel">
+          <button class="block question" data-panel="about" data-label="About Me" aria-label="Open About panel">
             <span class="block-face">?</span>
           </button>
-          <button class="block brick" data-panel="videos" aria-label="Open Videos panel">
+          <button class="block brick" data-panel="videos" data-label="Videos" aria-label="Open Videos panel">
             <span class="block-face">▶</span>
           </button>
-          <button class="block brick" data-panel="articles" aria-label="Open Articles panel">
+          <button class="block brick" data-panel="articles" data-label="Articles" aria-label="Open Articles panel">
             <span class="block-face">✎</span>
           </button>
-          <button class="block brick" data-panel="speaking" aria-label="Open Speaking panel">
+          <button class="block brick" data-panel="speaking" data-label="Speaking" aria-label="Open Speaking panel">
             <span class="block-face">🎤</span>
           </button>
-          <button class="block question" data-panel="links" aria-label="Open Links panel">
+          <button class="block question" data-panel="links" data-label="Links" aria-label="Open Links panel">
             <span class="block-face">★</span>
           </button>
         </div>
 
         <!-- Princess character -->
         <div id="peach" title="Princess Eleftheria"></div>
-
-        <!-- Floating coins -->
-        <div class="coins">
-          <div class="coin"></div><div class="coin"></div><div class="coin"></div>
-          <div class="coin"></div><div class="coin"></div><div class="coin"></div>
-        </div>
       </section>
 
       <!-- Panels -->
@@ -123,31 +113,31 @@
         <h2>Links</h2>
         <div class="links">
           <a class="link-card" href="https://github.com/EleftheriaBatsou" target="_blank" rel="noopener">
-            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="" />
+            <img src="https://cdn.simpleicons.org/github/ffffff" alt="" />
             <span>GitHub</span>
           </a>
-          <a class="link-card" href="https://twitter.com/BatsouElef" target="_blank" rel="noopener">
-            <img src="https://abs.twimg.com/favicons/twitter.2.ico" alt="" />
-            <span>X / Twitter</span>
+          <a class="link-card" href="https://x.com/BatsouElef" target="_blank" rel="noopener">
+            <img src="https://cdn.simpleicons.org/x/ffffff" alt="" />
+            <span>X</span>
           </a>
           <a class="link-card" href="https://www.linkedin.com/in/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://static.licdn.com/sc/h/al2o9zrvru7aqj9l6j1bu1qr1" alt="" />
+            <img src="https://cdn.simpleicons.org/linkedin/0A66C2" alt="" />
             <span>LinkedIn</span>
           </a>
           <a class="link-card" href="https://eleftheriabatsou.hashnode.dev/" target="_blank" rel="noopener">
-            <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1611902475075/1y4fUyy9y.png" alt="" />
+            <img src="https://cdn.simpleicons.org/hashnode/2962FF" alt="" />
             <span>Hashnode</span>
           </a>
           <a class="link-card" href="https://dev.to/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-black.png" alt="" />
+            <img src="https://cdn.simpleicons.org/devdotto/000000" alt="" />
             <span>Dev.to</span>
           </a>
           <a class="link-card" href="https://eleftheriabatsou.medium.com/" target="_blank" rel="noopener">
-            <img src="https://miro.medium.com/v2/resize:fill:48:48/1*8vJqR6P4PZfW1WqW8a7Qyg.png" alt="" />
+            <img src="https://cdn.simpleicons.org/medium/12100E" alt="" />
             <span>Medium</span>
           </a>
           <a class="link-card" href="https://www.youtube.com/c/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://www.youtube.com/s/desktop/9b9f5f29/img/favicon_144x144.png" alt="" />
+            <img src="https://cdn.simpleicons.org/youtube/FF0000" alt="" />
             <span>YouTube</span>
           </a>
         </div>
