fixing the globe

--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
             <span>X</span>
           </a>
           <a class="link-card" href="https://www.linkedin.com/in/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://cdn.simpleicons.org/linkedin/0A66C2" alt="LinkedIn icon" />
+            <img src="https://cdn.simpleicons.org/linkedin/ffffff" alt="LinkedIn icon" />
             <span>LinkedIn</span>
           </a>
           <a class="link-card" href="https://eleftheriabatsou.hashnode.dev/" target="_blank" rel="noopener">
-            <img src="https://cdn.simpleicons.org/hashnode/2962FF" alt="Hashnode icon" />
+            <img src="https://cdn.simpleicons.org/hashnode/ffffff" alt="Hashnode icon" />
             <span>Hashnode</span>
           </a>
           <a class="link-card" href="https://dev.to/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://cdn.simpleicons.org/devdotto/000000" alt="Dev.to icon" />
+            <img src="https://cdn.simpleicons.org/devdotto/ffffff" alt="Dev.to icon" />
             <span>Dev.to</span>
           </a>
           <a class="link-card" href="https://eleftheriabatsou.medium.com/" target="_blank" rel="noopener">
-            <img src="https://cdn.simpleicons.org/medium/12100E" alt="Medium icon" />
+            <img src="https://cdn.simpleicons.org/medium/ffffff" alt="Medium icon" />
             <span>Medium</span>
           </a>
           <a class="link-card" href="https://www.youtube.com/c/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://cdn.simpleicons.org/youtube/FF0000" alt="YouTube icon" />
+            <img src="https://cdn.simpleicons.org/youtube/ffffff" alt="YouTube icon" />
             <span>YouTube</span>
           </a>
         </div>
