checking the globe

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
             <span>X</span>
           </a>
           <a class="link-card" href="https://www.linkedin.com/in/eleftheriabatsou" target="_blank" rel="noopener">
-            <img src="https://cdn.simpleicons.org/linkedin/ffffff" alt="LinkedIn icon" />
+            <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+              <path fill="#ffffff" d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V8.961h3.414v1.569h.047c.476-.9 1.637-1.852 3.369-1.852 3.603 0 4.268 2.371 4.268 5.455v6.318zM5.337 7.433c-1.144 0-2.068-.926-2.068-2.068 0-1.143.924-2.068 2.068-2.068s2.068.925 2.068 2.068c0 1.142-.924 2.068-2.068 2.068zM7.114 20.452H3.56V8.961h3.554v11.491zM22.671 0H1.329C.595 0 0 .595 0 1.329v21.342C0 23.405.595 24 1.329 24h21.342C23.405 24 24 23.405 24 22.671V1.329C24 .595 23.405 0 22.671 0z"/>
+            </svg>
             <span>LinkedIn</span>
           </a>
           <a class="link-card" href="https://eleftheriabatsou.hashnode.dev/" target="_blank" rel="noopener">
