all are working well but the speaking is not finilized

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       </section>
     </main>
 
+    <div class="bottom-mask"></div>
     <footer class="footer">
       <div class="credits">
         © <span id="year"></span> Eleftheria Batsou • Built with <a href="https://go.cosine.sh/elef" target="_blank" rel="noopener">Cosine</a>
