--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
     </footer>
   </div>
 
+  <script src="https://unpkg.com/d3@7"></script>
+  <script src="https://unpkg.com/topojson-client@3"></script>
   <script src="script.js"></script>
 </body>
 </html>
